2002-08-06  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Removed obsolete -o and -d from getopt args. Added -e to
	redirect stderr of child to socket.
	* onenetd.1: Wrote manual page.

2002-08-05  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Fixed bug where onenetd wouldn't accept any connections
	after it had ever been full (calculating "full" in the wrong place).
	Made the disconnect message show the connection count after
	disconnection (since it's a bit more obvious then how much clients are
	actually connected from the log).

2002-06-03  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Avoid selecting on the listening socket when
	full. Split out the "send response" code, so that we can call it
	when we first notice a socket needs a response (which saves on the
	calls to select()). Made the status messages include the number of
	children running.

2002-05-31  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Removed redundant test for host being "0" (since
	inet_addr handles this case already). Changed uid and gid to
	longs, since uid_t and gid_t aren't signed under dietlibc. Made
	help a bit more helpful. Removed malloc debugging code.

2002-05-29  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Due to missing features on Solaris: removed "kill IP
	options", replaced setenv with putenv, replaced inet_ntoa with
	inet_addr.

	* onenetd.c: Added escape characters in response string.

2002-05-29  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Initial release.
	