@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(onenetd.c)
-AM_INIT_AUTOMAKE(onenetd, 1.8)
+AM_INIT_AUTOMAKE(onenetd, 1.9)
 
 dnl Checks for programs.
 AC_PROG_CC
