@@ -1,4 +1,4 @@
-.TH onenetd 1 "6th August 2002" "Version 1.8" "Network Tools"
+.TH onenetd 1 "29th December 2002" "Version 1.9" "Network Tools"
 .SH NAME
 onenetd \- listen on a TCP port and launch a program to handle requests
 .SH SYNOPSIS
