@@ -1,3 +1,8 @@
+2002-12-29  Adam Sampson  <azz@gnu.org>
+
+	* onenetd.c: Made all the errors that can occur in the main loop
+	non-fatal.
+
 2002-08-06  Adam Sampson  <azz@gnu.org>
 
 	* onenetd.c: Removed obsolete -o and -d from getopt args. Added -e to
